--- a/changelog
+++ b/changelog
@@ -14,3 +14,7 @@
 # Updated documentation
 # 0.0.8: Sat 16 Aug 2025 14:35:30 AEST
 # Added code to get default language and updated documentation
+# 0.0.9: Sat 16 Aug 2025 14:44:56 AEST
+# Documentation update
+# 0.1.0: Sat 16 Aug 2025 14:45:32 AEST
+# Bug fixes
