Added capability to process directories

--- a/changelog
+++ b/changelog
@@ -18,3 +18,7 @@
 # Documentation update
 # 0.1.0: Sat 16 Aug 2025 14:45:32 AEST
 # Bug fixes
+# 0.1.1: Sat 16 Aug 2025 16:09:47 AEST
+# Added capability to process directories
+# 0.1.2: Sat 16 Aug 2025 16:14:12 AEST
+# Bug fixes
