--- a/changelog
+++ b/changelog
@@ -22,3 +22,7 @@
 # Added capability to process directories
 # 0.1.2: Sat 16 Aug 2025 16:14:12 AEST
 # Bug fixes
+# 0.1.3: Sat 16 Aug 2025 17:23:52 AEST
+# Improved get function
+# 0.1.4: Sat 16 Aug 2025 18:16:30 AEST
+# Improved handling of files without a requested language
