--- a/changelog
+++ b/changelog
@@ -48,3 +48,5 @@
 # Added code to delete last audio track from AVI file
 # 1.2.5: Sun 17 Aug 2025 18:11:34 AEST
 # Added code to delete specific audio track from AVI file
+# 1.2.6: Sun 17 Aug 2025 20:16:17 AEST
+# Improved processing of multiple tracks
